fix(login): adjust positioning and font size of sub-title for better alignment

--- a/src/app/features/login/login-image/login-image.component.scss
+++ b/src/app/features/login/login-image/login-image.component.scss
@@ -61,8 +61,8 @@
       .sub-title {
         position: relative;
         top: -12.8vw;
-        left: -3.4vw;
-        font-size: 1.522vw;
+        left: -1.4vw;
+        font-size: 1.55vw;
         text-transform: uppercase;
         opacity: 0;
         animation: fadeInUp 1s ease-out 1s forwards;
@@ -98,8 +98,8 @@
         }
 
         .sub-title {
-          top: -19vw;
-          left: -4.8vw;
+          top: -19.22vw;
+          left: -2vw;
           font-size: 2.4vw;
         }
       }
